# Roqi-ERP

./: README.md
erpnext/: hooks.py  patches.txt
erpnext/controllers/: accounts_controller.py
erpnext/locale/: ar.po  bs.po  cs.po  da.po  de.po  eo.po  es.po  fa.po  fr.po  hr.po  hu.po  id.po  it.po  main.pot  my.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sr.po  sr_CS.po  sv.po  ta.po  th.po  tr.po  vi.po  zh.po
erpnext/manufacturing/doctype/master_production_schedule/: master_production_schedule.py
erpnext/manufacturing/doctype/sales_forecast/: sales_forecast.py
erpnext/public/js/: financial_statements.js
erpnext/public/scss/: erpnext.bundle.scss  roqi-theme.scss
erpnext/selling/doctype/sales_order/: sales_order.py
erpnext/setup/setup_wizard/data/: sample_blog_post.html
erpnext/stock/: serial_batch_bundle.py
erpnext/stock/doctype/item/: item.py
erpnext/stock/doctype/serial_and_batch_bundle/: serial_and_batch_bundle.py
erpnext/stock/doctype/stock_entry/: stock_entry.py
erpnext/templates/includes/footer/: footer_powered.html
erpnext/www/: payment_setup_certification.html
roqi_theme/: MANIFEST.in  README.md  pyproject.toml
roqi_theme/roqi_theme/: hooks.py  modules.txt
roqi_theme/roqi_theme/public/scss/: roqi-theme.scss  roqi_theme-web.bundle.scss
